services/pfe_devsecops/istio-manifests/allow-egress-googleapis.yaml
# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: allow-egress-googleapis
  annotations:
    checkov.io/skip100: CKV_K8S_22=Might break file writes
    checkov.io/skip101: CKV_K8S_28=Capabilities needed
    checkov.io/skip102: CKV_K8S_37=Default seccomp is fine
    checkov.io/skip103: CKV_K8S_43=Using latest tags for development
    checkov.io/skip104: CKV_K8S_8=No liveness probe available
    checkov.io/skip105: CKV_K8S_9=No readiness probe available
    checkov.io/skip106: CKV_K8S_10=No CPU requests
    checkov.io/skip107: CKV_K8S_11=No CPU limits
    checkov.io/skip108: CKV_K8S_12=No Memory requests
    checkov.io/skip109: CKV_K8S_13=No Memory limits
    checkov.io/skip110: CKV_K8S_14=No CPU limit
    checkov.io/skip111: CKV_K8S_15=No Memory limit
spec:
  hosts:
  - "accounts.google.com" # Used to get token
  - "*.googleapis.com"
  ports:
  - number: 80
    protocol: HTTP
    name: http
  - number: 443
    protocol: HTTPS
    name: https
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: allow-egress-google-metadata
  annotations:
    checkov.io/skip100: CKV_K8S_22=Might break file writes
    checkov.io/skip101: CKV_K8S_28=Capabilities needed
    checkov.io/skip102: CKV_K8S_37=Default seccomp is fine
    checkov.io/skip103: CKV_K8S_43=Using latest tags for development
    checkov.io/skip104: CKV_K8S_8=No liveness probe available
    checkov.io/skip105: CKV_K8S_9=No readiness probe available
    checkov.io/skip106: CKV_K8S_10=No CPU requests
    checkov.io/skip107: CKV_K8S_11=No CPU limits
    checkov.io/skip108: CKV_K8S_12=No Memory requests
    checkov.io/skip109: CKV_K8S_13=No Memory limits
    checkov.io/skip110: CKV_K8S_14=No CPU limit
    checkov.io/skip111: CKV_K8S_15=No Memory limit
spec:
  hosts:
  - metadata.google.internal
  addresses:
  - 169.254.169.254 # GCE metadata server
  ports:
  - number: 80
    name: http
    protocol: HTTP
  - number: 443
    name: https
    protocol: HTTPS
